syntax = "proto3";
package flowcraft_proto.v1;

message ImageEnhanceParams {
  float strength = 1;
  string model_name = 2;
}
